ADDED:     Dialog prompt on checkout     Generic Menu     Main Activity UI changes     Activity reroutes     Register activity is now accessible only from login activity

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -113,6 +113,7 @@
         android:layout_gravity="end"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/colorPrimary"
+        android:onClick="checkout"
         android:text="@string/buy_now"
         android:textColor="@color/white"
         android:textStyle="bold" />
