--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,32 +4,32 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="gr.homedeco.www.homedeco.Login">
 
     <TextView
+        android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUserName"
         android:labelFor="@+id/etUsername"
         android:text="@string/username"/>
 
     <EditText
+        android:id="@id/etUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@id/etUsername"
         android:inputType="text"/>
 
     <TextView
-        android:paddingTop="10dp"
         android:id="@+id/tvPassword"
-        android:labelFor="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:labelFor="@+id/etPassword"
+        android:paddingTop="10dp"
         android:text="@string/password" />
 
     <EditText
@@ -39,21 +39,32 @@
         android:inputType="textPassword"/>
 
     <CheckBox
+        android:id="@+id/cbRememberMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/remember_me"
         android:layout_marginBottom="10dp"
-        android:id="@+id/cbRememberMe"
-        android:checked="false" />
+        android:checked="false"
+        android:text="@string/remember_me" />
 
     <Button
         android:id="@+id/bLogin"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:backgroundTint="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="logIn" />
+        android:backgroundTint="@color/colorPrimary"
+        android:onClick="logIn"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:onClick="showRegister"
+        android:text="@string/noAccount_goToRegister"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
 </LinearLayout>
