--- a/app/src/main/res/layout/custom_products_row.xml
+++ b/app/src/main/res/layout/custom_products_row.xml
@@ -19,8 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:contentDescription="@string/content_description"
-            android:src="@drawable/ic_action_image"/>
+            android:contentDescription="@string/content_description" />
 
         <LinearLayout
             android:layout_width="match_parent"
